--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     width: 150px;
     height: 150px;
     border-radius: 275px;
+    object-fit: cover;
 }
 
 #twitter {
@@ -19,12 +20,7 @@
     flex-direction: column;
 }
 
-#twitter-link,
-#btn_zuri,
-#books,
-#book_python,
-#pitch,
-#book_design {
+#anchor a {
     margin-top: 24px;
     font-weight: 500;
     font-size: 18px;
@@ -56,7 +52,7 @@
 }
 
 #main-footer {
-    padding: 0 32px;
+    padding: 15px 32px;
     border-top: 1px solid #EAECF0;
     display: flex;
     justify-content: space-between;
@@ -77,4 +73,47 @@
 #i4g {
     width: 132px;
     height: 32px;
+}
+
+@media screen and (max-width: 600px) {
+    #profile_img {
+        width: 88px;
+        height: 88px;
+    }
+
+    #twitter {
+        font-size: 18px;
+    }
+
+    #anchor a {
+        font-size: 14px;
+        margin-top: 12px;
+    }
+
+    #footer {
+        padding: 0px;
+    }
+
+    #main-footer {
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    #zuri {
+        width: 140px;
+        height: 24px;
+        margin-top: 16px;
+    }
+
+    #main-footer p {
+        font-size: 14px;
+        margin-top: 16px;
+    }
+
+    #i4g {
+        width: 99px;
+        height: 24px;
+        margin-top: 16px;
+    }
 }
