--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #profile__img {
-    width: 150px;
-    height: 150px;
+    width: 88px;
+    height: 88px;
     border-radius: 275px;
     object-fit: cover;
 }
@@ -34,7 +34,8 @@
 }
 
 #social-section {
-    padding: 15px 0;
+    padding: 24px 0;
+    margin-top: 24px;
     background-color: #ffffff;
 }
 
